--- a/Demo/app/index.html
+++ b/Demo/app/index.html
@@ -4,40 +4,47 @@
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> 
 <html lang="en" class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/app.css"/>
-</head>
-<body ng-app="myApp">
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+     <head>
+          <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <title>My AngularJS App</title>
+          <meta name="description" content="">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="css/app.css"/>
+     </head>
+     <body ng-app="myApp">
+          <header>            
+               <ul class="menu">
+                    <li><a href="#/view1">view1</a></li>
+                    <li><a href="#/view2">view2</a></li>
+               </ul>            
+          </header>
+          <div class="main_container">
+               <!--[if lt IE 7]>
+                   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+               <![endif]-->
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+               <div ng-view></div>
+          </div>
+          <div class="clearfooter"></div>
+          <footer>
 
-  <div ng-view></div>
+               <h1>Angular seed app: v <span app-version></span></h1>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="app/js/jquery/jquery.js" type="text/javascript"></script>
-  <script src="app/js/angular.js/angular.js"></script>
-  <script src="app/js/angular.js/angular-route.js"></script>
-  <script src="app/js/ngDraggable.js" type="text/javascript"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
+               <!-- In production use:
+               <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+               -->
+               <script src="app/js/jquery/jquery.js" type="text/javascript"></script>
+               <script src="app/js/angular.js/angular.js"></script>
+               <script src="app/js/angular.js/angular-route.js"></script>
+               <script src="app/js/ngDraggable.js" type="text/javascript"></script>
+               <script src="js/app.js"></script>
+               <script src="js/filters.js"></script>
+               <script src="js/providers.js" type="text/javascript"></script>
+               <script src="js/services.js"></script>
+               <script src="js/controllers.js"></script>
+               <script src="js/directives.js"></script>
+          </footer>
+     </body>
 
 </html>
